2011-08-12 Tsi YANG <tsi@in-cite.net>
	* Feature: Added statistics table sql index on date and dataset
	* Feature: Added plugin pi3

2011-05-12 Tsi YANG <tsi@in-cite.net>
	* Feature: Added sql table for files downloads statistics

2011-05-12 In Cite Solution  <technique@in-cite.net>

	* initial code generated with kickstarter