@@ -195,5 +195,9 @@ t3lib_extMgm::addPlugin(array(
 if (TYPO3_MODE == 'BE') {
 	$TBE_MODULES_EXT['xMOD_db_new_content_el']['addElClasses']['tx_icsoddatastore_pi3_wizicon'] = t3lib_extMgm::extPath($_EXTKEY).'pi3/class.tx_icsoddatastore_pi3_wizicon.php';
 }
+t3lib_extMgm::addStaticFile($_EXTKEY,"pi3/static/","Datastore statistics");
+
+$TCA['tt_content']['types']['list']['subtypes_addlist'][$_EXTKEY.'_pi3']='pi_flexform';
+t3lib_extMgm::addPiFlexFormValue($_EXTKEY.'_pi3', 'FILE:EXT:ics_od_datastore/flexform_ds_pi3.xml');
 
 ?>
