@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>flexform</type>
+		<description>Language labels for plugin flexform &quot;tx_icsoddatastore_pi3&quot;</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="configuration">Configuration</label>
+			<label index="template">Template</label>
+			<label index="type">Type</label>
+			<label index="type_dataset">Dataset</label>
+			<label index="type_file">File</label>
+			<label index="size">Size</label>
+			<label index="period">Period (days)</label>
+		</languageKey>
+		<languageKey index="fr" type="array">
+			<label index="configuration">Configuration</label>
+			<label index="template">Template</label>
+			<label index="type">Top téléchargement par</label>
+			<label index="type_dataset">Jeu de données</label>
+			<label index="type_file">Fichiers</label>
+			<label index="size">Nombre de lignes</label>
+			<label index="period">Période (en jours)</label>
+		</languageKey>
+	</data>
+</T3locallang>
