@@ -251,5 +251,23 @@
 </div>
 <!-- ###TEMPLATE_RSS### end-->
 
+
+
+<h2>Statistics template</h2>
+<div>
+	<p>TITLE : The title like "Top 10"</p>
+	<p>RANK : Rank top</p>
+	<p>DATA : Data</p>
+	<p>COUNT : Number of downloads</p>
+</div>
+<!-- ###TEMPLATE_STATISTICS### start-->
+<h4>###TITLE###</h4>
+<ul>
+	<!-- ###TOP_ITEM### start-->
+	<li><span class="rank">###RANK###</span> ###DATA### ###COUNT###</li>
+	<!-- ###TOP_ITEM### end-->
+</ul>
+<!-- ###TEMPLATE_STATISTICS### end-->
+
 </body>
 </html>
